# TeraSim

./: .gitignore  README.md  autoware.md  carla.md  closeloop.md  fullstack.md  install.sh  pyproject.toml  readme.md  setup.py  terasim-cosim.yaml  terasim_cosim-2025.6.11-py3-none-any.whl  terasim_nde_nade-2024.10.31.1454-py3-none-any.whl  terasim_nde_nade-2025.4.27.1659-py3-none-any.whl
carla_examples/: carla_av_ros2.py  carla_av_simple.py  carla_cosim_plugin.py  carla_cosim_ros2.py  carla_cosim_simple.py  utils.py
examples/: carla_av_stack.py  carla_cav_stack.py  carla_cosim.py  carla_tls_plugin.py  construction_example.py  cyclist_example.py  default_sumo_example.py  multi_cav_example.py  nade_example.py  pedestrian_example.py  safetest_nade_example.py  terasim_bike_example.py  terasim_construction_zone_example.py  terasim_cosim_plugin.py  terasim_default_sumo_example.py  terasim_example.py  terasim_interface.py  terasim_nade_example.py  terasim_nde_example.py  terasim_pedestrian_example.py  terasim_plain_example.py  terasim_sumo_example.py  terasim_user_functions.py  terasim_utils.py  user_functions.py
examples/carla/: carla_av_stack.py  (+2 more)
source_code/TeraSim/: README.md  pyproject.toml
source_code/TeraSim-NDE-ITE/: build.py  pyproject.toml
source_code/TeraSim-NDE-ITE/example/: ITE.bash  gl_NADE.bash  gl_NADE_CAV.bash  gl_run_exp.sh  merge_json_d2rl.py  safetest_mcity_main.py  safetest_mcity_main_AV.py
source_code/TeraSim-NDE-ITE/terasim_nde_nade/envs/: safetest_nade_with_av.py  safetest_nde.py
source_code/TeraSim-NDE-ITE/terasim_nde_nade/vehicle/: aggressive_controller.py  conflict_generation_model.py  nde_controller.py  nde_decision_model.py  nde_ego_sensor.py  nde_vehicle_utils.py
source_code/TeraSim/examples/: example_traffic_light.py
source_code/TeraSim/terasim/agent/: agent.py  agent_decision_model.py  agent_sensor.py
source_code/TeraSim/terasim/envs/: base.py  template_traffic_light.py
source_code/TeraSim/terasim/logger/: infoextractor.py
source_code/TeraSim/terasim/measure/: measure.py
source_code/TeraSim/terasim/network/: trafficnet.py
source_code/TeraSim/tests/: test_physics.py
terasim_cosim/: constants.py
terasim_examples/: construction_example.py  cyclist_example.py  default_sumo_example.py  multi_cav_example.py  pedestrian_example.py  safetest_nade_example.py  terasim_cosim_plugin.py  terasim_user_functions.py
(+145 files in other folders)
