[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terasim_cosim"
version = "2.0.0"
description = "TeraSim co-simulation with other simulators"
authors = [
    {name = "Zhijie Qiao", email = "zhijieq@umich.edu"},
    {name = "Haowei Sun", email = "haoweis@umich.edu"},
    {name = "Haojie Zhu", email = "zhuhj@umich.edu"}
]
license = {text = "MIT"}
#urls = {homepage = "https://github.com/michigan-traffic-lab/TeraSim-Cosim"}

dependencies = [
    "pygame==2.6.1",
    "opencv-python==4.10.0.84",
    "typing_extensions==4.12.2",
    "numpy==1.26.4",
    "pydantic==2.6.3",
    "redis==5.0.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "terasim_cosim",
    "terasim_cosim.redis_client_wrapper",
    "terasim_cosim.redis_msgs",
    "terasim_cosim.terasim_plugin",
    "terasim_cosim.mcityos"
]

