[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "terasim"
version = "2024.05.03.1030"
description = "A SUMO-based environment for AV testing and evaluation"
authors = [ "Haowei Sun <haoweis@umich.edu>", "Haojie Zhu <zhuhj@umich.edu>", "Shuo Feng <fshuo@umich.edu>",]
license = "CC BY-NC 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
bidict = "^0.23.1"
attrs = "^23.2.0"
addict = "^2.4.0"
scipy = "^1.11.4"
eclipse-sumo = "^1.19.0"
traci = "^1.19.0"
libsumo = "^1.19.0"
sumolib = "^1.19.0"
redis = "^5.0.2"
lxml = "^5.1.0"
pydantic = "^2.6.3"
pyproj = "^3.6.1"
rtree = "^1.0.1"
loguru = "^0.7.2"
